# govsplice

./: .gitignore  Dockerfile  LICENSE  README.md  download-docker.sh  environment.yml  init.sh  pyproject.toml
docs/: resources.md
src/govsplice/: __init__.py  cli.py  config.py  data.py  database.py  local_types.py  main.py  users.py
src/govsplice/data/bounded/: age_bands_lsoa21_year2024.csv
src/govsplice/data/config/: template_valhalla.json
src/govsplice/pages/: landing.html  style.css  style_sheet.css  viewer.html  viewer_page.html
